# butterfly-elm

./: .gitignore  .travis.yml  README.md  butterfly.json  elm.json  package-lock.json  package.json
extractor/: Cargo.toml  README.md
extractor/src/: butterfly.rs  cloud_vision.rs  constants.rs  errors.rs  lib.rs  webpage_parser.rs
frontend/: butterfly.json  elm.json  package-lock.json  package.json
frontend/public/: index.html
frontend/public/assets/: butterfly.csv
frontend/src/: Main.elm  NavBar.elm  Navigation.elm  Page.elm  Route.elm  Session.elm
frontend/src/Butterfly/: Api.elm  Query.elm  Type.elm
frontend/src/Page/: Detail.elm  Dictionary.elm  Error.elm  Loading.elm  NotFound.elm
frontend/src/Page/Dictionary/: View.elm
frontend/tests/: Fuzzer.elm  Generator.elm  MainTest.elm  Tests.elm  Update.elm  UpdateTest.elm
src/: Main.elm  Modal.elm  NavBar.elm  Page.elm  Route.elm  Session.elm  Util.elm  main.css
src/Butterfly/: Api.elm  Query.elm  Type.elm
src/Page/: Area.elm  Category.elm  Components.elm  Description.elm  Detail.elm  Dictionary.elm  Error.elm  Home.elm  NotFound.elm  Reference.elm
src/Page/Dictionary/: View.elm
