[package]
name = "butterfly_extractor"
version = "0.1.0"
authors = ["Hiroto Shioi <shioihigg@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "0.10.1"
reqwest = "0.9.20"
kanaria = "0.1.1"
hex = "0.4.0"
serde_json = "1.0"
serde = { version = "1.0.99", features = ["derive"]}
base64 = "0.10.1"
scoped_threadpool = "0.1.9"
log = "0.4"
env_logger = "0.6.2"
csv = "1.1"
rayon = "1.2.0"
